--- a/css/main.css
+++ b/css/main.css
@@ -941,7 +941,7 @@ div.calendario::after{
  }
 div.dia:hover{
   background-color: #e1e1e1;
-  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
 }
 div.dia p.titulo{
   color: #fe4918;
