Finalizado el video 427

--- a/css/main.css
+++ b/css/main.css
@@ -961,6 +961,24 @@ div.cboxElement{
   text-align: center;
 }
 
+.resultado{
+  text-align: center;
+  padding: 1rem;
+  color: white;
+  max-width: 400px;
+  margin: 0 auto;
+}
+.correcto{
+  background-color: rgb( 2, 173, 2);
+}
+.error{
+  background-color: red;
+}
+
+
+
+
+
 
 
 
