Finalizado el video 478

--- a/css/main.css
+++ b/css/main.css
@@ -873,6 +873,12 @@ div.paquetes .tabla-precio input{
   color: #fe4918;
   font-weight: bold;
 }
+.contenido-dia .autor {
+  font-weight: bold;
+  text-transform: uppercase;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+}
 
 /** Resumen Registro **/
 div.resumen p{
