--- a/css/main.css
+++ b/css/main.css
@@ -794,7 +794,10 @@ p.copyright {
   margin: 20px 0 0 0;
   text-align: center;
 }
-
+p.copyright a {
+  text-decoration: none;
+  color: white;
+}
 /** Internas **/
 /* Conferencia */
 .galeria a {
