--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -52,3 +52,481 @@ ul.lista-precios li.numero{
 .info p span{
     text-transform: capitalize;
 }
+
+
+/************************************* Estilos del GDL************************************************/
+/*! HTML5 Boilerplate v7.3.0 | MIT License | https://html5boilerplate.com/ */
+
+/* main.css 2.0.0 | MIT License | https://github.com/h5bp/main.css#readme */
+/*
+ * What follows is the result of much research on cross-browser styling.
+ * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
+ * Kroc Camen, and the H5BP dev community and team.
+ */
+
+/* ==========================================================================
+   Base styles: opinionated defaults
+   ========================================================================== */
+
+   html {
+    color: #222;
+    font-size: 1em;
+    line-height: 1.4;
+  }
+  
+  /*
+   * Remove text-shadow in selection highlight:
+   * https://twitter.com/miketaylr/status/12228805301
+   *
+   * Vendor-prefixed and regular ::selection selectors cannot be combined:
+   * https://stackoverflow.com/a/16982510/7133471
+   *
+   * Customize the background color to match your design.
+   */
+  
+  ::-moz-selection {
+    background: #b3d4fc;
+    text-shadow: none;
+  }
+  
+  ::selection {
+    background: #b3d4fc;
+    text-shadow: none;
+  }
+  
+  /*
+   * A better looking default horizontal rule
+   */
+  
+  hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
+  }
+  
+  /*
+   * Remove the gap between audio, canvas, iframes,
+   * images, videos and the bottom of their containers:
+   * https://github.com/h5bp/html5-boilerplate/issues/440
+   */
+  
+  audio,
+  canvas,
+  iframe,
+  img,
+  svg,
+  video {
+    vertical-align: middle;
+  }
+  
+  /*
+   * Remove default fieldset styles.
+   */
+  
+  fieldset {
+    border: 0;
+    margin: 0;
+    padding: 0;
+  }
+  
+  /*
+   * Allow only vertical resizing of textareas.
+   */
+  
+  textarea {
+    resize: vertical;
+  }
+  
+  /* ==========================================================================
+     Browser Upgrade Prompt
+     ========================================================================== */
+  
+  .browserupgrade {
+    margin: 0.2em 0;
+    background: #ccc;
+    color: #000;
+    padding: 0.2em 0;
+  }
+  
+  /* ==========================================================================
+     Author's custom styles
+     ========================================================================== */
+  
+  html{
+    box-sizing: border-box;
+  }
+  *,*:before, *:after{
+    box-sizing: inherit;
+  }
+  body{
+    background-color: #f2f2f2;
+    font-family: 'Open Sans', sans-serif;
+  }
+  
+  /** Globales **/
+  .contenedor{
+    width: 98%;
+    margin: 0 auto;
+  }
+  @media only screen and (min-width: 480px){
+    .contenedor{
+      width: 95%;
+    }
+  }
+  @media only screen and (min-width: 768px){
+    .contenedor{
+      width: 90%;
+    }
+  }
+  @media only screen and (min-width: 992px){
+    .contenedor{
+      width: 90%;
+      max-width: 1100px;
+    }
+  }
+  .section{
+    padding: 30px 0;
+  }
+  .section p {
+    font-size: 1.2em;
+    text-align: center;
+  }
+  h2{
+    font-family: 'Oswald', sans-serif;
+    font-size: 2.4em;
+    text-transform: uppercase;
+    text-align: center;
+  }
+  h2::after{
+    content: '';
+    margin: 0 auto;
+    background-image: url(../img/separador.png);
+    height: 30px;
+    width: 100px;
+    display: block;
+  }
+  .naranja{
+    font-size: 1.8em;
+    color: #fe4918;
+    font-family: 'PT Sans', sans-serif;
+    margin: 0;
+  }
+  .boton{
+    font-family: 'Oswald', sans-serif;
+    background-color: #fe4918;
+    text-decoration: none;
+    padding: 10px 40px;
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-style: 1em;
+    margin-top: 20px;
+    display: inline-block;
+    transition: all .3s ease;
+    border: 2px solid #fe4918;
+  }
+  .boton.hollow, 
+  .boton.hollow:hover{
+    background-color: white;
+    color: #fe4918; 
+  }
+  .boton.transparent{
+    background-color: transparent;
+    border: 2px solid white;
+  }
+  .boton.transparent:hover{
+    border: 2px solid #fe4918;
+  }
+  ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  .float-right{
+     float: right;
+  }
+  .boton:hover{
+    background-color: #e33000;
+  }
+  /* Lettering */
+  h1.nombre-sitio span {
+    position: relative;
+    text-shadow: 0 0 30px black;
+  }
+  @media only screen and (min-width: 992px) {
+    .char1 {
+        top: 20px; right: 20px;
+    }
+    .char2 {
+      top: 0; left: -20px;
+    }
+    .char3 {
+      top: 10px; right: 20px;
+    }
+    .char4 {
+      top: 5px; right: 10px;
+    }
+    .char5 {
+      top: 15px; right: 10px;
+    }
+    .char6 {
+      top: 5px; right: 10px;
+    }
+    .char7 {
+      top: 20px; left: 10px;
+    }
+    .char8 {
+      top: 0; left: 10px;
+    }
+    .char9 {
+      top: 10px; right: 20px;
+    }
+    .char10 {
+      top: 20px; right: 20px;
+    }
+   }
+  
+  
+  
+  /** Navegacion prinicipal **/
+  nav.navegacion-principal{
+    display: none;
+    width: 100%;
+  }
+  nav.navegacion-principal a{
+    font-family: 'Oswald', sans-serif;
+    color: white;
+    text-decoration: none;
+    font-size: 1.3em;
+    text-transform: uppercase;
+    transition: all .3s ease;
+    width: 100%;
+    display: block;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  nav.navegacion-principal a:hover{
+    background-color: #fe4918;
+  }
+  nav.navegacion-principal a:last-child{
+    border: 2px solid #fe4918;
+    color: #fe4918;
+  }
+  nav.navegacion-principal a:last-child:hover{
+    color: white;
+  }
+  @media only screen and (min-width:768px){
+    nav.navegacion-principal{
+      width: 67%;
+      float: right;
+      text-align: right;
+      display: block;
+    }
+    nav.navegacion-principal a {
+      padding: 10px 10px;
+      display: inline-block;
+      width: auto;
+      display: inline-block;
+      text-align: center;
+      margin: 0 10px 0 0;
+    }
+  }
+  
+  
+  /** Detalle evento **/
+  div.detalle-evento{
+    margin-top: 20px;
+    border-bottom: 1px solid black;
+    padding: 0 20px;
+  }
+  div.detalle-evento:nth-child(2){
+    border: none;
+  }
+  div.detalle-evento p{
+    margin-bottom: 20px;
+    font-size: 20px;
+  }
+  
+  
+  /** Tabla de precios **/
+  ul.lista-precios > li {
+    padding: 10px;
+  }
+  @media only screen and (min-width: 768px) {
+    ul.lista-precios > li {
+      float: left;
+      width: 33.3%;
+    }
+   }
+  div.tabla-precio{
+    border: 1px solid #e1e1e1;
+    background-color: white;
+    padding: 40px 0;
+    text-align: center;
+    transition: all .3s ease;
+  }
+  div.tabla-precio:hover {
+    transform: scale(1.1);
+    border: 1px solid #fe4918;
+    box-shadow: 0px 0px 50px #666666;
+  }
+  div.tabla-precio ul li{
+    font-family: 'PT Sans', sans-serif;
+    font-size: 14px;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    color: #868686;
+    line-height: 26px;
+  } 
+
+  div.tabla-precio h3{
+    font-family: 'Oswald', sans-serif;
+    font-size: 16px;
+    text-transform: uppercase;
+  }
+  div.tabla-precio p.numero{
+    color: #000;
+    margin: 20px 0;
+  }
+  
+  
+   
+  
+  /** Registro **/
+  form.registro h3{
+    text-align: center;
+    text-transform: uppercase;
+    margin: 20px 0 0 0;
+  }
+  form.registro label{
+    margin-bottom: 5px;
+    font-weight: bold;
+  }
+  h4{
+    text-align: center;
+    text-transform: uppercase;
+    border-bottom: 2px solid #fe4918;
+    padding-bottom: 10px;
+    font-size: 1.2em;
+  }
+  div.caja{
+    background-color: white;
+    border: 1px solid #e1e1e1;
+    padding: 10px;
+    margin: 10px;
+  }
+  div.campo{
+    padding: 20px;
+  }
+  @media only screen and (min-width: 768px) {
+    div.campo{
+      float: left;
+      width: 33.3%;
+    }
+   }
+  div.paquetes .tabla-precio:hover{
+    transform: none;
+    box-shadow: none;
+  }
+  div.paquetes .tabla-precio input{
+    clear: both;
+    width: 100px;
+    margin: 10px auto 0 auto;
+    display: block;
+  }
+  .contenido-dia{
+    padding: 20px;
+    display: none;
+  }
+  @media only screen and (min-width: 768px) {
+    .contenido-dia > div {
+    float: left;
+    width: 33.3%;
+    }
+   }
+   .contenido-dia > div p {
+    text-align: left;
+  }
+  .contenido-dia > div label {
+    display: block;
+    margin-bottom: 10px;
+  }
+  .contenido-dia > div input {
+    margin-right: 10px;
+  }
+  .contenido-dia > div label time{
+    color: #fe4918;
+    font-weight: bold;
+  }
+  .contenido-dia .autor {
+    font-weight: bold;
+    text-transform: uppercase;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+  }
+  
+  /** Resumen Registro **/
+  div.resumen p{
+    font-size: 1.2em;
+    text-transform: uppercase;
+  }
+  div.resumen div.extras{
+    float: left;
+    width: 50%;
+    padding: 30px;
+  }
+  div.extras div.orden{
+    text-align: left;
+    margin-bottom: 10px;
+  }
+  div.extras div.orden input {
+    margin: 10px 0 0 0 ;
+  }
+  div.resumen div.total {
+    float: right;
+    width: 50%;
+    padding: 30px;
+  }
+  @media only screen and (max-width: 768px) {
+    div.resumen div.extras{
+      float: left;
+      width: 99%;
+      padding: 30px;
+    }
+    div.resumen div.total {
+      float: left;
+      width: 99%;
+      padding: 30px;
+    }
+   }
+  
+
+  #lista-productos{
+    background-color: #e1e1e1;
+    padding: 20px;
+    display: none;
+  }
+  #suma-total{
+    text-align: center;
+    font-size: 2em;
+    color: #fe4918;
+  }
+  #error {
+    clear: both;
+  }
+  
+  p.numero{
+    color: #fe4918;
+    font-size: 4em;
+    display: block;
+    margin: 0 0 10px 0;
+    font-family: 'Oswald', sans-serif;
+  }
+  
+  
+  
+  
+  
